--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -58,3 +58,24 @@ Style/CommentedKeyword:
 
 Style/SafeNavigation:
   Enabled: false
+
+Style/GlobalStdStream:
+  Enabled: false
+
+Style/RedundantRegexpEscape:
+  Enabled: false
+
+Style/StringConcatenation:
+  Enabled: false
+
+Style/CaseLikeIf:
+  Enabled: false
+
+Lint/UselessMethodDefinition:
+  Enabled: false
+
+Style/SoleNestedConditional:
+  Enabled: false
+
+Lint/ConstantDefinitionInBlock:
+  Enabled: false
